# Data_Product_Generator

./: .env  README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml  requirements.txt
.archive/: entrypoint.sh  main_test.py  makefile
apps/data_generator/: init.py  main.py
apps/data_generator/config/: config_simulation.py
apps/data_generator/data/: data_writer.py  dataframe_generator.py  delta_initializer.py
apps/data_generator/data_resources/: adresses_resources.py  first_name_resources.py  surname_resources.py
apps/data_generator/simulation/DP_Sales/bronze/: bronze_customer.py  bronze_order.py  bronze_product.py
apps/data_generator/simulation/DP_Sales/gold/: gold_fact_revenue.py
apps/data_generator/simulation/DP_Sales/loads/: gold_fact_revenue_load.py
apps/data_generator/simulation/abstract/: abstract_table.py
apps/data_generator/simulation/config_tables/: config_bronze_time_booking.py
apps/data_generator/simulation/data_product_one/loads/: load_silver_revenue_time.py
apps/data_generator/simulation/data_product_one/tables/: abstract_table.py  (+4 more)
apps/data_generator/utils/: utils.py
apps/tests/: test.py
archive/: docker-compose.yml  dockerfile
src/: dockerfile
src/data/: data_writer.py  dataframe_generator.py
src/data_generator/: dataframe_generator.py
src/simulation/example_processing/tables/: bronze_customer.py  bronze_order.py  bronze_product.py  gold_fact_revenue.py
src/simulation_processing/tables/: bronze_revenue.py  bronze_time_booking.py
src/sink/: local.py
src/source/: source_processing.py
src/utils/: utils.py
(+4 files in other folders)
