[tool.poetry]
name = "spark-optimizer"
version = "0.1.0"
description = ""
authors = ["RiWieland <Rich.Wieland73@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.11"
delta-spark = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
